initialized escape game model/controller/service/route and get available theaters name
